--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-streamlit>=1.28.0
-pandas>=2.1.0
-numpy>=1.26.0
-matplotlib>=3.7.2
-seaborn>=0.12.2
-anthropic>=0.5.0
-openai>=0.28.1
-nltk>=3.8.1
-scikit-learn>=1.3.0
-spacy>=3.6.1
-openpyxl>=3.1.2
-ipywidgets>=8.0.0
-tqdm>=4.66.0
+anthropic==0.28.0
+matplotlib==3.8.0
+nltk==3.8.1
+numpy==1.24.3
+openai==1.6.1
+openpyxl==3.1.2
+pandas==2.0.3
+scikit-learn==1.3.0
+seaborn==0.13.0
+streamlit==1.30.0
+tqdm==4.66.1
