--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 anthropic==0.28.0
-matplotlib==3.8.0
+matplotlib>=3.8.0
 nltk==3.8.1
-numpy==1.24.3
+numpy>=1.26.0  # Обновлено для совместимости с Python 3.12
 openai==1.6.1
 openpyxl==3.1.2
-pandas==2.0.3
-scikit-learn==1.3.0
+pandas>=2.1.0  # Обновлено для совместимости с новым numpy
+scikit-learn>=1.3.0
 seaborn==0.13.0
 streamlit==1.30.0
 tqdm==4.66.1
