--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-rich==13.9.0
-streamlit==1.32.0
-pandas==2.1.0
-numpy==1.26.0
-matplotlib==3.8.0
-seaborn==0.13.0
-nltk==3.8.1
-scikit-learn==1.3.0
-anthropic==0.18.0
-openai==1.16.0
-tqdm==4.66.1
-openpyxl==3.1.2
+streamlit>=1.27.0
+pandas>=1.5.3
+numpy>=1.24.3
+matplotlib>=3.7.1
+seaborn>=0.12.2
+anthropic>=0.5.0
+openai>=1.3.0
+tqdm>=4.65.0
+nltk>=3.8.1
+scikit-learn>=1.2.2
+openpyxl>=3.1.2
